chore: make the calendar image appealing

--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
@@ -34,8 +34,8 @@
                         src="/assets/icons/check-green.svg" width="10" />
                 </div>
             </div>
-            <div *ngIf="!selectedDate" class=" justify-content-center align-items-center py-5">
-                <img loading="lazy" class="img-fluid" src="/assets/icons/time-picker.svg" alt="" width="450">
+            <div *ngIf="!selectedDate" class=" h-100 d-flex justify-content-center align-items-center  py-5">
+                <img loading="lazy" class="img-fluid" src="/assets/images/time-picker.png" alt="" width="600">
             </div>
             <div *ngIf="selectedDate">
                 <div class="date-time-frame mt-4">
