chore: add comimg soon page

--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -46,22 +46,22 @@
           </div>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="#" role="button" aria-expanded="false">
+          <a class="nav-link" [routerLink]="'/resources'" role="button" aria-expanded="false">
             <div class="header-underline-animation">Resources</div>
           </a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="#" role="button" aria-expanded="false">
+          <a class="nav-link" [routerLink]="'/pricing'" role="button" aria-expanded="false">
             <div class="header-underline-animation">Pricing</div>
           </a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="#" role="button" aria-expanded="false">
+          <a class="nav-link" [routerLink]="'/blog'" role="button" aria-expanded="false">
             <div class="header-underline-animation">Blog</div>
           </a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="#" role="button" aria-expanded="false">
+          <a class="nav-link" [routerLink]="'/store'" role="button" aria-expanded="false">
             <div class="header-underline-animation">Store</div>
           </a>
         </li>
