chore: add content for extra pages

--- a/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
+++ b/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
@@ -1,1 +1,26 @@
-<p>coming-soon works!</p>
+<main role="main" class="d-flex flex-column container mx-auto">
+    <div class="row d-flex align-items-center" style="row-gap: 24px;">
+        <div class="col-12 col-md-6">
+            <div class="coming-soon-header">We are creating something <span class="fs-4">amazing for you 💜</span>
+            </div>
+            <div class="coming-soon-helper-text">All Good Things Come to Those who Wait... James 5:7-11</div>
+        </div>
+        <div class="d-none d-md-block col-12 col-md-6">
+            <img loading="lazy" class="img-fluid" src="/assets/images/coming-soon.png" alt="">
+        </div>
+    </div>
+
+    <div class="row my-5  mx-auto">
+        <div class="col">
+            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.FACEBOOK"><img loading="lazy"
+                    src="assets/icons/social/facebook-purple.svg" alt="" width="24" height="24" /></a>
+        </div>
+        <div class="col">
+            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.INSTAGRAM"><img loading="lazy"
+                    src="assets/icons/social/instagram-purple.svg" alt="" width="24" height="24" /></a>
+        </div>
+        <div class="col">
+            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.TIKTOK"><img loading="lazy"
+                    src="assets/icons/social/tiktok-purple.svg" alt="" width="24" height="24" /></a>
+        </div>
+    </div>
