chore: add content for extra pages

--- a/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
+++ b/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
@@ -1,9 +1,17 @@
 <main role="main" class="d-flex flex-column container mx-auto">
     <div class="row d-flex align-items-center" style="row-gap: 24px;">
         <div class="col-12 col-md-6">
-            <div class="coming-soon-header">We are creating something <span class="fs-4">amazing for you 💜</span>
+            <div class="coming-soon-header title-gradient">We are creating <span class="fs-5">something</span> amazing
+                for
+                you💜
+                <br>
+                <span class="coming-soon-helper-text title-gradient fs-6">All Good Things Come to Those who
+                    Wait...
+                    James
+                    5:7-11
+                </span>
+
             </div>
-            <div class="coming-soon-helper-text">All Good Things Come to Those who Wait... James 5:7-11</div>
         </div>
         <div class="d-none d-md-block col-12 col-md-6">
             <img loading="lazy" class="img-fluid" src="/assets/images/coming-soon.png" alt="">
