--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid pt-2" style="max-width: 1440px; gap: 16px;">
-    <a class="navbar-brand me-5" [routerLink]="'/'">
+    <a class="navbar-brand" [routerLink]="'/'">
       <img loading="lazy" src="/assets/images/logo.svg" alt="Clutter Free Finds Logo" class="img-fluid" />
     </a>
     <div class="collapse navbar-collapse flex-col-md" id="navbarSupportedContent">
