--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.html
@@ -1,14 +1,14 @@
 <div class="accordion-item ">
-    <h2 class="accordion-header" id="headingQuoteInfo">
+    <div class="accordion-header" id="headingQuoteInfo">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQuoteInfo"
             aria-expanded="true" aria-controls="collapseQuoteInfo"
             [class.isCompleted]="notes !== '' || filesArr.length !== 0">
-            <div class="row  row-cols-2 steps w-100">
+            <div class="row  steps w-100">
                 <div class="col-auto step-text-number">Step 4:</div>
                 <div class="col step-text">Additional information (optional) </div>
             </div>
         </button>
-    </h2>
+    </div>
     <div id="collapseQuoteInfo" class="accordion-collapse collapse show" aria-labelledby="headingQuoteInfo"
         data-bs-parent="#accordionQuote">
         <div class="accordion-body">
