--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
@@ -1,14 +1,14 @@
 <div class="accordion-item ">
-    <h2 class="accordion-header" id="headingOne">
-        <button (click)="loadServices()" [class.isActive]="selectedCffService.id !== ''" class="accordion-button"
-            type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
-            aria-controls="collapseOne">
-            <div class="row row-cols-2 steps w-100">
+    <div class="accordion-header" id="headingOne">
+        <button class="d-flex" (click)="loadServices()" [class.isActive]="selectedCffService.id !== ''"
+            class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+            aria-expanded="true" aria-controls="collapseOne">
+            <div class="row  steps w-100">
                 <div class="col-auto step-text-number">Step 1:</div>
                 <div class="col step-text">Select Service</div>
             </div>
         </button>
-    </h2>
+    </div>
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
         data-bs-parent="#accordionQuote">
         <div class="accordion-body">
