--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -4,8 +4,8 @@
             <button class="back-btn border-0" (click)="goBack()" [disabled]="currentStepIndex === 0"
                 [class]="currentStepIndex === 0 ? 'deactivated' : ''"
                 [class.d-none]="currentStepIndex === renderedSteps.length-4"><img loading="lazy"
-                    src="assets/icons/arrow-right.svg" alt=""> Go
-                Back</button>
+                    src="assets/icons/arrow-right.svg" alt=""> <span class="d-none d-md-block">Go
+                    Back</span></button>
             <div class="active-step" [class.isActiveStep]="currentStep?.status === 'active' || 'completed'">
                 {{steps[currentStepIndex].title}}
             </div>
@@ -20,9 +20,10 @@
             <button class="next-btn border-0" (click)=" goToNext()"
                 [class.d-none]="currentStepIndex === renderedSteps.length-1"
                 [disabled]="instantQuoteForm(steps[currentStepIndex].key)?.invalid"
-                [class]="instantQuoteForm(steps[currentStepIndex].key)?.valid ? '' : 'deactivated'">Go
-                Next <img loading="lazy" [class.pulse]="steps[0].status === 'active'" src="assets/icons/arrow-right.svg"
-                    alt=""></button>
+                [class]="instantQuoteForm(steps[currentStepIndex].key)?.valid ? '' : 'deactivated'"><span class="d-none
+                d-md-block">Go
+                    Next</span> <img loading="lazy" [class.pulse]="steps[0].status === 'active'"
+                    src="assets/icons/arrow-right.svg" alt=""></button>
         </div>
         <ng-container *ngTemplateOutlet="returnStepsTemplate()"> </ng-container>
         <ng-template #iqCalendar>
