--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
@@ -1,6 +1,6 @@
 <div class="accordion-item ">
     <div class="accordion-header" id="headingOne">
-        <button class="d-flex" (click)="loadServices()" [class.isActive]="selectedCffService.id !== ''"
+        <button class="d-flex" (click)="loadServices()" [class.isCompleted]="selectedCffService.id !== ''"
             class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
             aria-expanded="true" aria-controls="collapseOne">
             <div class="row  steps w-100">
