--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
@@ -1,7 +1,7 @@
 <div class="accordion-item ">
     <div class="accordion-header" id="headingSpace">
         <button (click)="loadSpaces()" [disabled]="(_service_selected$ | async)?.id === ''"
-            [class.isSelected]="selectedCffSpace.id !== ''" class="accordion-button" type="button"
+            [class.isCompleted]="selectedCffSpace.id !== ''" class="accordion-button" type="button"
             data-bs-toggle="collapse" data-bs-target="#collapseSpace" aria-expanded="true"
             aria-controls="collapseSpace">
             <div class="row   steps w-100">
