--- a/apps/website/mfe/src/app/app.component.html
+++ b/apps/website/mfe/src/app/app.component.html
@@ -1,3 +1,5 @@
-<cff-header></cff-header>
-<router-outlet></router-outlet>
-<clutterfreefinds-v2-footer></clutterfreefinds-v2-footer>
+<div class="flex flex-col">
+    <cff-header></cff-header>
+    <router-outlet></router-outlet>
+    <clutterfreefinds-v2-footer class="bottom-0"></clutterfreefinds-v2-footer>
+</div>
