chore: redo styling with tailwind

--- a/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/what-we-do/what-we-do.component.html
@@ -1,34 +1,24 @@
-<section style="margin-top: 64px">
-  <div>
-    <div class="cff-v2-what-we-do-title">
-      <span class="d-inline-flex me-1">{{
-        'HOME_PAGE.WHAT_WE_DO.TITLE' | translate
-        }}</span><span class="title-gradient">{{
-        'HOME_PAGE.WHAT_WE_DO.GRADIENT' | translate
-        }}</span>
-    </div>
-    <div class="cff-v2-what-we-do-description mx-auto">
-      {{ 'HOME_PAGE.WHAT_WE_DO.DESCRIPTION' | translate }}
-    </div>
+<div>
+  <div class="mb-4 text-center text-3xl font-extrabold text-dark-900 lg:text-5xl">
+    <span class="d-inline-flex me-1">{{
+      'HOME_PAGE.WHAT_WE_DO.TITLE' | translate
+      }}</span><span class="text-transparent bg-clip-text bg-gradient-to-r to-secondary-900 from-primary-900">{{
+      'HOME_PAGE.WHAT_WE_DO.GRADIENT' | translate
+      }}</span>
   </div>
-  <div class="d-flex mx-auto row justify-content-center" style="gap: 40px">
-    <ng-container *ngFor="let servie of services">
-      <a
-        class="card col-12 col-lg-4 cff-v2-what-we-do-card border-0 d-flex flex-column align-items-center justify-content-between">
+  <div class="text-dark-600 text-center w-4/5 mx-auto mb-4 md:mb-9 ">
+    {{ 'HOME_PAGE.WHAT_WE_DO.DESCRIPTION' | translate }}
+  </div>
+  <div class="grid md:grid-cols-3 mb-8 border border-primary-100 rounded-lg shadow-sm">
+    <figure *ngFor="let servie of services"
+      class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-primary-100 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e ">
+      <figcaption class="flex items-center justify-center mb-5">
         <img loading="lazy" alt="clutter free finds services" class="img-fluid" [src]="servie.image" />
-        <span class="cff-v2-what-we-do-card-header">
-          {{ servie.title | translate }}
-        </span>
-
-        <div class="cff-v2-what-we-do-card-description">
-          {{ servie.description | translate }}
-        </div>
-        <button class="btn link-btn d-flex" type="button">
-          <span> {{ 'HOME_PAGE.WHAT_WE_DO.LINK' | translate }}</span>
-          <img loading="lazy" alt="learn more about clutter free finds" src="./assets/icons/arrow-right.svg" width="24"
-            height="24" />
-        </button>
-      </a>
-    </ng-container>
+      </figcaption>
+      <blockquote class="max-w-2xl mx-auto mb-4 text-dark-600 lg:mb-8 ">
+        <h3 class="text-lg font-semibold text-dark-900 md:text-2xl">{{ servie.title | translate }}</h3>
+        <p class="my-4">{{ servie.description | translate }}</p>
+      </blockquote>
+    </figure>
   </div>
-</section>
+</div>
