--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div class="grid grid-cols-2 gap-4 items-center">
-      <a class="cursor-pointer focus:outline-none text-white text-center bg-primary-900 hover:bg-dark-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-primary-600 dark:hover:bg-dark-600 dark:focus:ring-primary-900"
+      <a class="cursor-pointer focus:outline-none text-white text-center bg-primary-900 hover:bg-dark-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 "
         type="button" [routerLink]="['/instant-quote']">{{
         'HOME_PAGE.HERO_SECTION.BUTTON_1' | translate
         }}</a>
@@ -39,7 +39,7 @@
 </div>
 <div class="p-4 bg-white rounded-lg md:p-8 dark:bg-dark-600" id="stats">
   <dl
-    class="md:divide-x bg-purple  divide-dark-100 dark:divide-dark-300 grid grid-cols-1 p-4 mx-auto text-gray-900 sm:grid-cols-1 md:grid-cols-5 dark:text-white sm:p-8">
+    class="md:divide-x bg-purple  divide-dark-100 dark:divide-dark-300 grid grid-cols-1 p-4 mx-auto text-gray-900 sm:grid-cols-1 md:grid-cols-5 sm:p-8">
     <div class="flex flex-col items-center justify-center ">
       <dt class="mb-2 text-3xl md:text-6xl font-extrabold text-primary-900 ">+3</dt>
       <dd class="text-dark-900 dark:text-gray-400">Organized Spaces</dd>
