--- a/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
@@ -1,72 +1,83 @@
-<section style="margin-top: 16px">
+<section class="max-w-screen-xl  mx-auto">
   <div>
-    <div class="cff-v2-the-process-section-title mx-auto">
+    <div class="my-4 text-center text-3xl font-extrabold text-dark-900 lg:text-5xl">
       {{ 'HOME_PAGE.THE_PROCESS.TITLE' | translate }}
     </div>
-    <div class="cff-v2-the-process-section-description mx-auto">
+    <div class="text-dark-600 text-center  mb-4 md:mb-9">
       {{ 'HOME_PAGE.THE_PROCESS.DESCRIPTION' | translate }}
     </div>
   </div>
-  <div class="container cff-v2-the-process-section p-3 p-lg-5">
-    <div class="row cff-v2-the-process-section-process position-relative">
-      <div class="line z-1 d-none d-lg-block"></div>
-      <ng-container *ngFor="let process of processes">
-        <div class="col-12 col-md-6 col-lg-3 z-2 d-flex align-items-center flex-column" style=" margin-bottom: 18px;">
-          <div>
+  <div class="relative p-4">
+    <div class="z-20 relative overflow-hidden">
+      <hr
+        class="hidden md:block absolute w-full my-6 border-dark-100 sm:mx-auto z-10 md:translate-x-24 md:top-20 z-20 " />
+      <div class="grid md:grid-cols-4 relative w-full z-20 mb-6 md:mb-12">
+        <ng-container *ngFor="let process of processes">
+          <div class="flex justify-center items-center flex-col ">
             <img loading="lazy" [src]="'assets/images/' + process.image" [alt]="process.description | translate"
-              class="img-fluid" />
+              class="mb-3 h-20 w-25" />
+            <div class="flex flex-col items-center">
+              <div
+                class="font-bold rounded-full bg-primary-900 w-8 h-8 flex items-center justify-center mb-2 text-light-900">
+                {{ process.number }}
+              </div>
+              <div class="font-semibold text-base text-center">
+                {{ process.title | translate }}
+              </div>
+              <div class="font-normal text-sm md:text-base text-center text-dark-600 line-clamp-2">
+                {{ process.description | translate }}
+              </div>
+            </div>
           </div>
-          <div class="d-flex flex-column align-items-center">
-            <div class="cff-v2-the-process-section-number">
-              {{ process.number }}
-            </div>
-            <div class="cff-v2-the-process-section-title-process">
-              {{ process.title | translate }}
-            </div>
-            <div class="cff-v2-the-process-section-description-process">
-              {{ process.description | translate }}
-            </div>
-          </div>
-        </div>
-      </ng-container>
-    </div>
-    <div class="row align-items-center">
-      <div class="col d-flex flex-column align-items-center align-items-md-start" style="max-width: 673px">
-        <div class="cff-v2-the-process-section-title">
-          <div class="cff-v2-the-process-section-title-text">
+        </ng-container>
+      </div>
+      <div class="flex flex-col gap-2 md:flex-row items-center p-4  mx-auto">
+        <div class="w-full md:w-1/2 flex flex-col items-center md:items-start max-w-2xl">
+          <div class="mb-2 text-lg font-semibold text-dark-900">
             {{ 'HOME_PAGE.THE_PROCESS.INTAKE_FORM.TITLE' | translate }}
           </div>
-        </div>
-        <div class="cff-v2-the-process-section-list">
-          <ng-container *ngFor="let item of [1, 2, 3, 4]">
-            <div class="list-item mb-3">
-              <div class="circle-check-purple">
-                <img loading="lazy" alt="clutter free finds services circle-check-purple"
-                  src="/assets/icons/check-light.svg" width="10" />
+          <div class="mb-3">
+            <ng-container *ngFor="let item of [1, 2, 3, 4]">
+              <div class="flex items-center mb-3">
+                <svg class="w-4 h-4 me-2 text-primary-900 flex-shrink-0" aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                  <path
+                    d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
+                </svg>
+                <span class="font-normal text-dark-600 text-base">
+                  {{
+                  'HOME_PAGE.THE_PROCESS.INTAKE_FORM.LIST.ITEM' + item
+                  | translate
+                  }}
+                </span>
               </div>
-
-              <span>
-                {{
-                'HOME_PAGE.THE_PROCESS.INTAKE_FORM.LIST.ITEM' + item
-                | translate
-                }}
-              </span>
-            </div>
-          </ng-container>
+            </ng-container>
+          </div>
+          <div class="flex flex-col items-start">
+            <a (click)="bookACall()"
+              class="cursor-pointer focus:outline-none text-white text-center bg-primary-900 hover:bg-dark-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 "
+              type="button">
+              {{ 'HOME_PAGE.THE_PROCESS.BUTTON' | translate}}</a>
+            <span class="flex items-center">
+              <svg class="w-4.5 h-4.5 text-primary-600 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                <path fill-rule="evenodd"
+                  d="M11.644 3.066a1 1 0 0 1 .712 0l7 2.666A1 1 0 0 1 20 6.68a17.694 17.694 0 0 1-2.023 7.98 17.406 17.406 0 0 1-5.402 6.158 1 1 0 0 1-1.15 0 17.405 17.405 0 0 1-5.403-6.157A17.695 17.695 0 0 1 4 6.68a1 1 0 0 1 .644-.949l7-2.666Zm4.014 7.187a1 1 0 0 0-1.316-1.506l-3.296 2.884-.839-.838a1 1 0 0 0-1.414 1.414l1.5 1.5a1 1 0 0 0 1.366.046l4-3.5Z"
+                  clip-rule="evenodd" />
+              </svg>
+              <span class="font-normal text-dark-600 text-sm">{{ 'HOME_PAGE.THE_PROCESS.SUPPORT_TEXT' | translate
+                }}</span>
+            </span>
+          </div>
         </div>
-        <div class="d-flex flex-column align-items-start">
-          <a (click)="bookACall()" class="btn primary-btn" type="button">
-            {{ 'HOME_PAGE.THE_PROCESS.BUTTON' | translate}}</a>
-          <span class="cff-v2-the-process-section-support-text d-flex align-items-center">
-            <img loading="lazy" src="assets/icons/shield.svg" alt="clutter free finds client privacy" class="me-1" />
-            {{ 'HOME_PAGE.THE_PROCESS.SUPPORT_TEXT' | translate }}
-          </span>
+        <div class="flex w-full md:w-1/2 justify-end border-lg">
+          <!--Add autoplay on intersection-->
+          <video class="rounded-lg" preload autoplay loop playsinline src="/assets/videos/home-organizing.webm"></video>
         </div>
       </div>
-      <div class="d-none d-md-block col align-self-center" style="border-radius: 16px;">
-        <img loading="lazy" src="/assets/videos/living-room-organizing.gif" alt="Living Room organizing"
-          class="img-fluid" />
-      </div>
+    </div>
+    <div
+      class="z-10 bg-gradient-to-b from-primary-100 to-primary-300 w-full h-full absolute top-0 left-0 z-0 rounded-lg border-r-2 border-r-primary-600 border-b-2 border-b-primary-600">
     </div>
   </div>
 </section>
