--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -27,14 +27,66 @@
             class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 dark:text-light-900 md:dark:hover:text-primary-600 dark:hover:bg-dark-primary dark:hover:text-primary-600 md:dark:hover:bg-transparent dark:border-dark-600"
             aria-current="page">Home</a>
         </li>
-        <li>
-          <button id="mega-menu-full-dropdown-button" data-collapse-toggle="mega-menu-full-dropdown"
-            class=" nav-link font-semibold flex items-center justify-between w-full py-2 px-3 text-dark-900 rounded md:w-auto hover:bg-primary-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-900  md:p-0 dark:text-light-900 md:dark:hover:text-primary-600 dark:hover:bg-dark-600 dark:hover:text-primary-600 md:dark:hover:bg-transparent dark:border-dark-600">Company
-            <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-              viewBox="0 0 10 6">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="m1 1 4 4 4-4" />
-            </svg></button>
+        <li class="relative">
+          <button type="button" (click)="toggleCustomerMegaMenu()"
+            class="nav-link font-semibold flex items-center justify-between w-full py-2 px-3 text-dark-900 rounded md:w-auto hover:bg-primary-100 md:hover:bg-transparent md:border-0 md:hover:text-primary-900  md:p-0"
+            aria-expanded=" ">
+            <span>Company</span>
+            <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd"
+                d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z"
+                clip-rule="evenodd" />
+            </svg>
+          </button>
+
+          <div [@openClose]="openCloseCustomerMegaMenuTrigger"
+            class="absolute  z-50 mt-5 flex w-full md:w-screen max-w-max md:-translate-x-1/2 md:-left-1/2 px-4">
+            <div
+              class="w-screen max-w-md flex-auto overflow-hidden rounded-3xl bg-white text-sm leading-6 shadow-lg ring-1 ring-gray-900/5">
+              <div class="p-4">
+                <div class="group relative flex gap-x-6 rounded-lg p-4 hover:bg-gray-50">
+                  <div
+                    class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+                    <img loading="lazy" [src]="'assets/header/about.svg'" alt="about clutter free finds">
+                  </div>
+                  <div>
+                    <a [routerLink]="'/about'" class="font-semibold text-gray-900">
+                      About
+                      <span class="absolute inset-0"></span>
+                    </a>
+                    <p class="mt-1 text-gray-600">Who are we? What is our Vision? And Our
+                      Goals and everything you need to know about Clutter Free Finds</p>
+                  </div>
+                </div>
+                <div class="group relative flex gap-x-6 rounded-lg p-4 hover:bg-gray-50">
+                  <div
+                    class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+                    <img loading="lazy" [src]="'assets/header/how-it-works.svg'" alt="how-it-works clutter free finds">
+                  </div>
+                  <div>
+                    <a [routerLink]="'/how-it-works'" class="font-semibold text-gray-900">
+                      How it Works
+                      <span class="absolute inset-0"></span>
+                    </a>
+                    <p class="mt-1 text-gray-600">Explore the step-by-step breakdown of our
+                      Professional Organizing approach from Mess to Yess</p>
+                  </div>
+                </div>
+              </div>
+              <div class="grid divide-x divide-dark-300 bg-dark-100">
+                <a href="https://www.youtube.com/watch?v=eZClhYwU7Qc&t=245s" target="_blank"
+                  class="flex items-center justify-start gap-x-2.5 p-4 font-semibold text-gray-900 hover:bg-gray-100">
+                  <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd"
+                      d="M21.7 8.037a4.26 4.26 0 0 0-.789-1.964 2.84 2.84 0 0 0-1.984-.839c-2.767-.2-6.926-.2-6.926-.2s-4.157 0-6.928.2a2.836 2.836 0 0 0-1.983.839 4.225 4.225 0 0 0-.79 1.965 30.146 30.146 0 0 0-.2 3.206v1.5a30.12 30.12 0 0 0 .2 3.206c.094.712.364 1.39.784 1.972.604.536 1.38.837 2.187.848 1.583.151 6.731.2 6.731.2s4.161 0 6.928-.2a2.844 2.844 0 0 0 1.985-.84 4.27 4.27 0 0 0 .787-1.965 30.12 30.12 0 0 0 .2-3.206v-1.516a30.672 30.672 0 0 0-.202-3.206Zm-11.692 6.554v-5.62l5.4 2.819-5.4 2.801Z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  Watch our work on YouTube
+                </a>
+              </div>
+            </div>
+          </div>
         </li>
         <li>
           <a [routerLink]="'/store'"
@@ -54,37 +106,6 @@
         <li>
           <a [routerLink]="'/blog'"
             class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 dark:text-light-900 md:dark:hover:text-primary-600 dark:hover:bg-dark-primary dark:hover:text-primary-600 md:dark:hover:bg-transparent dark:border-dark-600">Blog</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div id="mega-menu-full-dropdown"
-    class="mt-1  bg-dark-100 md:bg-light-900 dark:bg-dark-900 dark:border-dark-600 hidden">
-    <div class="grid max-w-screen-lg px-4 py-5 mx-auto text-dark-900 dark:text-light-900 sm:grid-cols-2 md:px-6">
-      <ul>
-        <li>
-          <a [routerLink]="'/about'"
-            class="flex items-start gap-2 p-3 rounded-lg hover:bg-primary-100 dark:hover:bg-dark-600">
-            <img loading="lazy" [src]="'assets/header/about.svg'" alt="about clutter free finds">
-            <div class="block">
-              <div class="font-semibold">About Us</div>
-              <span class="text-sm text-dark-600 dark:text-dark-400">Who are we? What is our Vision? And Our
-                Goals and everything you need to know about Clutter Free Finds.</span>
-            </div>
-          </a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a [routerLink]="'/how-it-works'"
-            class="flex items-start block gap-2 p-3 rounded-lg hover:bg-primary-100 dark:hover:bg-dark-600">
-            <img loading="lazy" [src]="'assets/header/how-it-works.svg'" alt="how-it-works clutter free finds">
-            <div class="block">
-              <div class="font-semibold">How it Works</div>
-              <span class="text-sm text-dark-600 dark:text-dark-400">Explore the step-by-step breakdown of our
-                Professional Organizing approach from Mess to Yess</span>
-            </div>
-          </a>
         </li>
       </ul>
     </div>
